tried to fix the horizontal scrollbar problem

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1114,7 +1114,7 @@ color: var(--first-color-lighter);
       column-gap: 5rem;
   }
   .about_img{
-      width: 450px;
+      width: 350px;
       align-self: start;
       padding-top: 20%;
   }
